@@ -451,8 +451,18 @@ class tx_srfeuserregister_data {
 
 				if (isset($dataArray[$theField]) || !count($origArray) || !isset($origArray[$theField])) {
 					$listOfCommands = t3lib_div::trimExplode(',', $theValue, 1);
+ 
+					$keyUnsetEmpty = array_search('unsetEmpty', $listOfCommands);
+					if ($keyUnsetEmpty !== FALSE) {
+						unset($listOfCommands[$keyUnsetEmpty]);
+						$listOfCommands = array_merge(array('unsetEmpty'), $listOfCommands);
+					}
+					$bSetToEmpty = FALSE;
 
 					foreach ($listOfCommands as $k => $cmd) {
+						if ($bSetToEmpty) {
+							break;
+						}
 						$cmdParts = preg_split('/\[|\]/', $cmd); // Point is to enable parameters after each command enclosed in brackets [..]. These will be in position 1 in the array.
 						$theCmd = trim($cmdParts[0]);
 						switch($theCmd) {
@@ -591,6 +601,7 @@ class tx_srfeuserregister_data {
 									unset($this->failureMsg[$theField]);
 									unset($dataArray[$theField]); // This should prevent the field from entering the database.
 									unset($dataArray[$theField.'_again']);
+									$bSetToEmpty = TRUE;
 								}
 							break;
 							case 'upload':
@@ -790,7 +801,7 @@ class tx_srfeuserregister_data {
 
 									if (is_array($hookClassArray)) {
 										foreach($hookClassArray as $classRef) {
-											$hookObj= &t3lib_div::getUserObj($classRef);
+											$hookObj = t3lib_div::getUserObj($classRef);
 											if (method_exists($hookObj, 'evalValues')) {
 												$test = TRUE;
 												$errorField = $hookObj->evalValues(
@@ -904,6 +915,12 @@ class tx_srfeuserregister_data {
 						$cmdParts = preg_split('/\[|\]/', $cmd); // Point is to enable parameters after each command enclosed in brackets [..]. These will be in position 1 in the array.
 						$theCmd = trim($cmdParts[0]);
 						$bValueAssigned = TRUE;
+						if (
+							$theField == 'password' &&
+							!isset($dataArray[$theField])
+						) {
+							$bValueAssigned = FALSE;
+						}
 						$dataValue = (isset($dataArray[$theField]) ? $dataArray[$theField] : $origArray[$theField]);
 
 						switch($theCmd) {
@@ -1205,7 +1222,7 @@ class tx_srfeuserregister_data {
 
 						$newFieldList = implode (',', $newFieldArray);
 
-						if ($theTable == 'fe_users' && $password) {
+						if ($theTable == 'fe_users' && $password != '') {
 							$outGoingData['password'] = $password;
 						}
 
@@ -1232,7 +1249,7 @@ class tx_srfeuserregister_data {
 						// Call all afterSaveEdit hooks after the record has been edited and saved
 						if (is_array($hookClassArray)) {
 							foreach($hookClassArray as $classRef) {
-								$hookObj= &t3lib_div::getUserObj($classRef);
+								$hookObj = t3lib_div::getUserObj($classRef);
 								if (method_exists($hookObj, 'registrationProcess_afterSaveEdit')) {
 									$hookObj->registrationProcess_afterSaveEdit($newRow, $this);
 								}
@@ -1333,7 +1350,7 @@ class tx_srfeuserregister_data {
 					// Call all afterSaveCreate hooks after the record has been created and saved
 					if (is_array ($hookClassArray)) {
 						foreach  ($hookClassArray as $classRef) {
-							$hookObj= &t3lib_div::getUserObj($classRef);
+							$hookObj = t3lib_div::getUserObj($classRef);
 							if (method_exists($hookObj, 'registrationProcess_afterSaveCreate')) {
 								$hookObj->registrationProcess_afterSaveCreate($newRow, $this);
 							}
@@ -1387,7 +1404,7 @@ class tx_srfeuserregister_data {
 							// Call all beforeSaveDelete hooks BEFORE the record is deleted
 						if (is_array ($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$extKey][$prefixId]['registrationProcess'])) {
 							foreach  ($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$extKey][$prefixId]['registrationProcess'] as $classRef) {
-								$hookObj= &t3lib_div::getUserObj($classRef);
+								$hookObj = t3lib_div::getUserObj($classRef);
 								if (method_exists($hookObj, 'registrationProcess_beforeSaveDelete')) {
 									$hookObj->registrationProcess_beforeSaveDelete($origArray, $this);
 								}
